# bitcoin-parser

./: cli.sh  setup.sh  web.sh
src/: CMakeLists.txt  accounting.cpp  accounting.h  block.cpp  block.h  block_parser.cpp  block_parser.h  json_helper.cpp  json_helper.h  main.cpp  script.cpp  script.h  script_processor.cpp  script_processor.h  transaction.cpp  transaction.h  utilities.cpp  utilities.h
webapp/: index.js  package-lock.json  package.json
webapp/public/: app.js  index.html  style.css
